# forex-ai-trading-bot

./: .env.example  .gitignore  CLAUDE.md  PLAN.md  README.md
.cursor/plans/: forex_ai_trading_bot_03320dc9.plan.md
backend/: alembic.ini  pyproject.toml  test_data_ingestion.py  test_feature_engineering.py  test_infrastructure.py  test_model_training.py  test_oanda_connection.py  test_signal_generation.py
backend/alembic/: env.py
backend/alembic/versions/: 0bc7e5559506_fix_market_data_primary_key_for_.py  33fe8dda15a8_initial_schema_with_market_data_signals_.py  4bc3d057e722_convert_market_data_to_timescaledb_.py
backend/api/: __init__.py  main.py  test_client.html  websocket_broadcaster.py  websocket_manager.py
backend/backend/models/saved/: EUR_USD_v1_20251229_163723_metadata.json  EUR_USD_v1_20251229_163740_metadata.json
backend/data_ingestion/: __init__.py  aggregator_main.py  ingestion_service.py  main.py  oanda_client.py  streaming_client.py  tick_aggregator.py
backend/shared/: __init__.py  config.py  database.py  models.py  redis_client.py
backend/strategy_engine/features/: __init__.py  feature_engineer.py  feature_service.py  indicators.py
backend/strategy_engine/models/: __init__.py  label_generator.py  model_store.py  model_trainer.py  predictor.py
backend/strategy_engine/signals/: __init__.py  main.py  signal_generation_service.py
docs/: ARCHITECTURE.md  DECISIONS.md
infrastructure/docker/: Dockerfile.aggregator  Dockerfile.api  Dockerfile.streaming  docker-compose.yml
infrastructure/docker/init-scripts/: 01-init-timescaledb.sql
